# reflex-agent-pluggable

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml
src/reflexsoar_agent/: agent.py
src/reflexsoar_agent/action/: __init__.py
src/reflexsoar_agent/action/base/: base.py
src/reflexsoar_agent/action/sentinelone/: sentinelone.py
src/reflexsoar_agent/core/: config.py  errors.py  logging.py  management.py  utils.py  version.py
src/reflexsoar_agent/core/event/: __init__.py  __manager.py  _manager.py  base.py  encoders.py  errors.py  manager.py
src/reflexsoar_agent/core/vault/: vault.py
src/reflexsoar_agent/input/: __init__.py
src/reflexsoar_agent/input/base/: __init__.py  base.py
src/reflexsoar_agent/input/core/: __init__.py  elasticsearch.py  es.py
src/reflexsoar_agent/role/: __init__.py
src/reflexsoar_agent/role/base/: __init__.py  base.py
src/reflexsoar_agent/role/core/: __init__.py  detector.py  poller.py  runner.py  syslog.py
src/reflexsoar_agent/role/core/detector/: __init__.py  detection.py  detector.py  rule.py
src/reflexsoar_agent/role/core/event/: __init__.py  encoders.py  manager.py
src/reflexsoar_agent/role/ilm/: __init__.py  ilm.py
tests/: conftest.py  reflex-agent.py  test_agent.py  test_agent_policy.py  test_base_role.py  test_detection_rule.py  test_elasticsearch_input.py  test_encoders.py  test_event_manager.py  test_event_queue.py  test_event_spooler.py  test_events.py  test_management_connections.py  test_vault.py
tests/sample_data/: elastic_signals.json  reflexsoar-agent-vault.yml
