[tool.poetry]
name = "reflexsoar-agent"
version = "0.1.0"
description = ""
authors = ["Brian Carroll <bcarroll@zeroonesecurity.com>"]
readme = "README.md"
repository = "https://github.com/reflexsoar/reflex-agent-pluggable"
packages = [
    {include = "reflexsoar_agent", from="src"}
]
[tool.poetry.scripts]
reflexsoar-agent = "reflexsoar_agent.agent:cli"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
requests = "^2.28.1"
platformdirs = "^2.5.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
