[tool.poetry]
name = "reflexsoar-agent"
version = "2022.12.00"
description = ""
authors = ["Brian Carroll <bcarroll@zeroonesecurity.com>"]
readme = "README.md"
repository = "https://github.com/reflexsoar/reflex-agent-pluggable"
packages = [
    {include = "reflexsoar_agent", from="src"}
]
[tool.poetry.scripts]
reflexsoar-agent = "reflexsoar_agent.agent:cli"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
requests = "^2.28.1"
platformdirs = "^2.5.3"
python-dotenv = "^0.21.0"
persist-queue = "^0.8.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
flake8-bandit = "^4.1.1"
elasticsearch = "^8.5.0"
retry = "^0.9.2"
opensearch-py = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
autopep8 = "^2.0.0"
pre-commit = "^2.20.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
mypy = "^0.990"
nox = "^2022.8.7"
coverage-badge = "^1.1.0"
genbadge = {extras = ["all"], version = "^1.1.0"}
types-requests = "^2.28.11.4"
isort = "^5.10.1"
flynt = "^0.76"
safety = "^2.3.1"
pytest = "^7.2.0"
bandit = "^1.7.4"
requests-mock = "^1.10.0"
pytest-loguru = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

#[tool.coverage.report]
#fail_under = 100
[tool.bandit]
exclude_dirs = ["tests","reports",".vscode",".pytest_cache",".nox",".mypy_cache",".github",".badges"]
